--- a/config/i3/config
+++ b/config/i3/config
@@ -157,6 +157,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+bindsym $mod+Tab workspace back_and_forth
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
