--- a/config/i3/config
+++ b/config/i3/config
@@ -145,8 +145,6 @@ bindsym $mod+r mode "resize"
 
 bindsym $mod+Tab workspace back_and_forth
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
 bar {
-        status_command i3status
+    status_command i3blocks -c ~/Projects/dotfiles/config/i3blocks/config
 }
