--- a/config/i3/config
+++ b/config/i3/config
@@ -48,7 +48,7 @@ bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # split in horizontal orientation
-bindsym $mod+Control+h split h
+bindsym $mod+c split h
 
 # split in vertical orientation
 bindsym $mod+v split v
