Empty prompt when renaming tmux windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,9 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# empty prompt when renaming windows
+bind-key , command-prompt "rename-window '%%'"
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 
