Updates tmux config to start windows and panes at index 1

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,3 +17,10 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.local/share/tmux/plugins/tpm/tpm'
+
+# Start windows and panes index at 1, not 0.
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Ensure window index numbers get reordered on delete.
+set-option -g renumber-windows on
