--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,8 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-set -g prefix C-s
+set -g prefix C-Space
+set -g mouse on
 
 setw -g mode-keys vi
 bind-key h select-pane -L
