--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,14 +10,18 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# keybindings for yanking
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # empty prompt when renaming windows
 bind-key , command-prompt "rename-window '%%'"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.local/share/tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
@@ -25,3 +29,6 @@ setw -g pane-base-index 1
 
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.local/share/tmux/plugins/tpm/tpm'
