--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,6 +23,9 @@ set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
 setw -g pane-base-index 1
