Adds new tmux shortcuts for making splits and new splits now open in the same directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,11 @@ set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Open panes in current directory
+# and do splits with - and |
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
 
