--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -23,6 +23,10 @@ set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# Automatically save and restore tmux sessions
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 
