--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -28,7 +28,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
 
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
