--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,6 +3,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-Space
 set -g mouse on
+set -g default-terminal "screen-256color"
 
 setw -g mode-keys vi
 bind-key h select-pane -L
@@ -29,6 +30,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
+set -g @catppuccin_window_tabs_enabled on
 
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
