Adds tmux shortcut for faster switching between last two windows

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -41,6 +41,9 @@ setw -g pane-base-index 1
 bind - split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
+# faster switch between last two windows
+bind-key p last-window
+
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
 
