Adds tmux shortcut for opening python repl in popup

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -16,6 +16,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+# keybindings for popups
+bind-key P display-popup -w 75% -E 'tmux new -s py3 python3'
+
 # empty prompt when renaming windows
 bind-key , command-prompt "rename-window '%%'"
 
