--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,16 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Resize shortcuts
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
+
+# Home row switch between windows
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
 # keybindings for yanking
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
