--- a/config/i3blocks/config
+++ b/config/i3blocks/config
@@ -16,6 +16,11 @@ signal=10
 command=~/Projects/dotfiles/scripts/battery.sh
 interval=60
 
+[notificatoins]
+command=~/Projects/dotfiles/scripts/notify-toggle.sh
+interval=once
+signal=11
+
 [time]
 command=date '+%H:%M %P'
 interval=60
