--- a/config/i3/config
+++ b/config/i3/config
@@ -26,6 +26,9 @@ exec --no-startup-id compton
 # start a terminal
 bindsym $mod+Return exec alacritty
 
+# toggle notifications
+bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle && pkill -RTMIN+11 i3blocks
+
 # kill focused window
 bindsym $mod+q kill
 
