Fixes i3wm's loading cursor when launching the terminal

--- a/config/i3/config
+++ b/config/i3/config
@@ -24,7 +24,7 @@ exec --no-startup-id redshift -P -O 4500
 exec --no-startup-id compton
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec --no-startup-id alacritty
 
 # toggle notifications
 bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle && pkill -RTMIN+11 i3blocks
