--- a/config/i3/config
+++ b/config/i3/config
@@ -134,6 +134,7 @@ exec --no-startup-id alacritty --class scratchpad
 bindsym $mod+Shift+Return [class="scratchpad"] scratchpad show; [class="scratchpad"] move position center
 
 bindsym $mod+b exec firefox
+bindsym $mod+Shift+b exec chromium
 bindsym $mod+Shift+f exec thunar
 bindsym $mod+Shift+v exec diodon
 
