--- a/config/i3blocks/config
+++ b/config/i3blocks/config
@@ -7,8 +7,7 @@ separator_block_width=15
 markup=none
 
 [volume]
-label=
-instance=Master
+command=~/Projects/dotfiles/scripts/volume.sh
 interval=once
 signal=10
 
