--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -58,4 +58,4 @@ bind-key p last-window
 set-option -g renumber-windows on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.local/share/tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
