--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -4,7 +4,6 @@ bind r source-file ~/.config/tmux/tmux.conf
 set -g prefix C-Space
 set -g mouse on
 set -g default-terminal "screen-256color"
-set -g window-status-current-style bg=blue
 
 setw -g mode-keys vi
 bind-key h select-pane -L
@@ -41,6 +40,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # Automatically save and restore tmux sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
