--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -41,8 +41,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_default_text "#W"
 
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
