--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -17,6 +17,6 @@ window:
 
 font:
   normal:
-    family: "FiraCode Nerd Font"
+    family: "UbuntuMono Nerd Font Mono"
     style: Regular
-  size: 12
+  size: 14
