--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,7 +3,8 @@ bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-Space
 set -g mouse on
-set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "tmux-256color"
 
 setw -g mode-keys vi
 bind-key h select-pane -L
