--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -29,6 +29,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # keybindings for popups
 bind-key P display-popup -w 75% -E 'tmux new -s py3 python3'
+bind-key f run-shell '~/Projects/dotfiles/config/tmux/popuptmux'
 
 # empty prompt when renaming windows
 bind-key , command-prompt "rename-window '%%'"
