Updates config after migrating back to i3

--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -10,7 +10,7 @@ family = "UbuntuMono Nerd Font Mono"
 style = "Regular"
 
 [window]
-decorations = "none"
+decorations = "full"
 dynamic_padding = false
 opacity = 0.95
 
