--- a/config/i3/config
+++ b/config/i3/config
@@ -2,7 +2,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FiraCode Nerd Font 11
+font pango:UbuntuMono Nerd Font 12
 
 
 # Use pactl to adjust volume in PulseAudio.
@@ -22,6 +22,8 @@ exec --no-startup-id gxkb
 exec --no-startup-id feh --bg-scale ~/Projects/dotfiles/images/wallpaper.jpg
 exec --no-startup-id redshift -P -O 4500
 exec --no-startup-id picom
+exec --no-startup-id blueman-applet
+exec --no-startup-id ~/Projects/dotfiles/scripts/keyboard.sh
 
 # start a terminal
 bindsym $mod+Return exec --no-startup-id alacritty
@@ -122,7 +124,6 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # enables floating and centering for certain windows
 # for Firefox'es Library/Downloads window
-for_window [title="Library"] floating enable move position center
 for_window [class="mpv|feh"] floating enable move position center
 
 for_window [class="scratchpad"] floating enable
@@ -133,8 +134,7 @@ exec --no-startup-id alacritty --class scratchpad
 
 bindsym $mod+Shift+Return [class="scratchpad"] scratchpad show; [class="scratchpad"] move position center
 
-bindsym $mod+b exec --no-startup-id firefox
-bindsym $mod+Shift+b exec --no-startup-id chromium
+bindsym $mod+b exec --no-startup-id chromium
 bindsym $mod+Shift+f exec --no-startup-id alacritty -e ranger
 bindsym $mod+Shift+v exec --no-startup-id clipmenu -l 20
 
