--- a/config/i3/config
+++ b/config/i3/config
@@ -136,7 +136,7 @@ bindsym $mod+Shift+Return [class="scratchpad"] scratchpad show; [class="scratchp
 
 bindsym $mod+b exec --no-startup-id chromium
 bindsym $mod+Shift+f exec --no-startup-id alacritty -e ranger
-bindsym $mod+Shift+v exec --no-startup-id clipmenu -l 20
+bindsym $mod+Shift+v exec --no-startup-id clipmenu -i -l 20
 
 set $lock_command ~/Projects/dotfiles/scripts/locker
 exec --no-startup-id xautolock -time 5 -corners ---- -locker $lock_command
