--- a/config/i3/config
+++ b/config/i3/config
@@ -23,6 +23,7 @@ exec --no-startup-id feh --bg-scale ~/Projects/dotfiles/images/wallpaper.jpg
 exec --no-startup-id redshift -P -O 4500
 exec --no-startup-id picom
 exec --no-startup-id blueman-applet
+exec --no-startup-id solaar -w hide
 exec --no-startup-id ~/Projects/dotfiles/scripts/keyboard.sh
 
 # start a terminal
