--- a/config/i3blocks/config
+++ b/config/i3blocks/config
@@ -27,7 +27,7 @@ signal=11
 
 [packages]
 label=  
-command=yay -Qu | wc -l
+command=~/Projects/dotfiles/scripts/update.sh
 interval=3600
 
 [time]
