--- a/config/i3/config
+++ b/config/i3/config
@@ -1,3 +1,30 @@
+set $rosewater #f5e0dc
+set $flamingo #f2cdcd
+set $pink #f5c2e7
+set $mauve #cba6f7
+set $red #f38ba8
+set $maroon #eba0ac
+set $peach #fab387
+set $yellow #f9e2af
+set $green #a6e3a1
+set $teal #94e2d5
+set $sky #89dceb
+set $sapphire #74c7ec
+set $blue #89b4fa
+set $lavender #b4befe
+set $text #cdd6f4
+set $subtext1 #bac2de
+set $subtext0 #a6adc8
+set $overlay2 #9399b2
+set $overlay1 #7f849c
+set $overlay0 #6c7086
+set $surface2 #585b70
+set $surface1 #45475a
+set $surface0 #313244
+set $base #1e1e2e
+set $mantle #181825
+set $crust #11111b
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -194,11 +221,6 @@ set $default_outer_gaps 5
 gaps inner $default_inner_gaps
 gaps outer $default_outer_gaps
 
-bar {
-    workspace_min_width 50
-    status_command i3blocks -c ~/Projects/dotfiles/config/i3blocks/config
-}
-
 # Reference: https://gist.github.com/comradecheese/b502ca67393217c1d238fd7fd6a42bd8
 # Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps.
 # Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace).
@@ -237,4 +259,29 @@ mode "$mode_gaps_outer" {
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
+}
+
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
+
+bar {
+    workspace_min_width 50
+    status_command i3blocks -c ~/Projects/dotfiles/config/i3blocks/config
+    colors {
+        background         $base
+        statusline         $text
+        focused_statusline $text
+        focused_separator  $base
+
+        # target           border bg        text
+        focused_workspace  $base  $mauve    $crust
+        active_workspace   $base  $surface2 $text
+        inactive_workspace $base  $base     $text
+        urgent_workspace   $base  $red      $crust
+    }
 }
