--- a/config/i3/config
+++ b/config/i3/config
@@ -140,7 +140,7 @@ bindsym $mod+Shift+f exec --no-startup-id alacritty -e ranger
 bindsym $mod+Shift+v exec --no-startup-id clipmenu -i -l 20
 
 set $lock_command ~/Projects/dotfiles/scripts/locker
-exec --no-startup-id xautolock -time 5 -corners ---- -locker $lock_command
+# exec --no-startup-id xautolock -time 5 -corners ---- -locker $lock_command
 bindsym $mod+x exec --no-startup-id $lock_command
 
 
