--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = ["~/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
-
-live_config_reload = true
 
 [font]
 size = 12
@@ -21,3 +18,7 @@ lines = 24
 [window.padding]
 x = 10
 y = 10
+
+[general]
+
+live_config_reload = true
