--- a/config/i3/config
+++ b/config/i3/config
@@ -2,7 +2,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:UbuntuMono Nerd Font 12
+font pango:UbuntuMono Nerd Font Italic 12
 
 
 # Use pactl to adjust volume in PulseAudio.
