--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -38,6 +38,8 @@ bind-key , command-prompt "rename-window '%%'"
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
+# remain in copy mode after yanking
+set -g @yank_action 'copy-pipe'
 
 # Automatically save and restore tmux sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
