Added i3blocks brightness script and key bindings

--- a/config/i3/config
+++ b/config/i3/config
@@ -12,6 +12,11 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $update_volume
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $update_volume
 
+# Brightness control
+set $update_brightness pkill -RTMIN+12 i3blocks
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5% && $update_brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%- && $update_brightness
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
