--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g prefix C-Space
 set -g mouse on
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g default-terminal "tmux-256color"
+set -g status-style 'bg=#333333 fg=#5eacd3'
 
 setw -g mode-keys vi
 bind-key h select-pane -L
