--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -8,7 +8,7 @@ style = "Italic"
 
 [window]
 decorations = "full"
-dynamic_padding = false
+dynamic_padding = true
 opacity = 0.95
 
 [window.dimensions]
@@ -16,8 +16,8 @@ columns = 80
 lines = 24
 
 [window.padding]
-x = 10
-y = 10
+x = 5
+y = 5
 
 [general]
 
