--- a/config/i3/config
+++ b/config/i3/config
@@ -17,6 +17,12 @@ set $update_brightness pkill -RTMIN+12 i3blocks
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5% && $update_brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%- && $update_brightness
 
+# Media control
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+bindsym XF86AudioStop exec --no-startup-id playerctl stop
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
