--- a/config/i3/config
+++ b/config/i3/config
@@ -2,7 +2,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:UbuntuMono Nerd Font Regular 12
+font pango:JetBrainsMono Nerd Font Bold 10
 
 
 # Use pactl to adjust volume in PulseAudio.
@@ -47,7 +47,7 @@ bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle && pkill -RTMIN+1
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -fn "UbuntuMono Nerd Font:size=12"
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "JetBrainsMono Nerd Font Bold:size=12"
 
 # change focus
 bindsym $mod+h focus left
