--- a/config/i3/config
+++ b/config/i3/config
@@ -30,7 +30,7 @@ exec --no-startup-id dunst
 exec --no-startup-id clipmenud
 exec --no-startup-id nm-applet
 exec --no-startup-id gxkb
-exec --no-startup-id feh --bg-scale ~/Projects/dotfiles/images/wallpaper.jpg
+exec --no-startup-id feh --bg-scale ~/Projects/dotfiles/images/cottages-river.png
 exec --no-startup-id redshift -P -O 4500
 exec --no-startup-id picom
 exec --no-startup-id blueman-applet
