--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,7 +5,6 @@ set -g prefix C-Space
 set -g mouse on
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g default-terminal "tmux-256color"
-set -g status-style 'bg=#333333 fg=#5eacd3'
 
 setw -g mode-keys vi
 bind-key h select-pane -L
@@ -36,6 +35,14 @@ bind-key f run-shell '~/Projects/dotfiles/config/tmux/popuptmux'
 bind-key , command-prompt "rename-window '%%'"
 
 # Plugins
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "rounded"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_session}"
+
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
