--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,7 +3,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-Space
 set -g mouse on
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-overrides ",*:RGB"
 set -g default-terminal "tmux-256color"
 
 setw -g mode-keys vi
