--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -35,13 +35,9 @@ bind-key f run-shell '~/Projects/dotfiles/config/tmux/popuptmux'
 bind-key , command-prompt "rename-window '%%'"
 
 # Plugins
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @catppuccin_flavor 'mocha'
-set -g @catppuccin_window_status_style "rounded"
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_session}"
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @theme_disable_plugins 1
+set -g @theme_transparent_status_bar 'true'
 
 set -g @plugin 'tmux-plugins/tpm'
 
