Updated picom config

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,11 +1,15 @@
-backend = "glx";
+backend = "xrender";
+vsync = false;                  # avoids driver stalls
+use-damage = true;
 
-# Defaults
-inactive-opacity = 1;
-active-opacity = 1;
+inactive-opacity = 1.0;
+active-opacity   = 1.0;
 
-# Custom opacity for terminal
 opacity-rule = [
   "95:class_g = 'Alacritty' && focused",
   "95:class_g = 'Alacritty' && !focused"
 ];
+
+unredir-if-possible = false;    # prevent fullscreen unredirect surprises
+detect-transient = true;
+detect-client-leader = true;
