--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -7,7 +7,9 @@ active-opacity   = 1.0;
 
 opacity-rule = [
   "95:class_g = 'Alacritty' && focused",
-  "95:class_g = 'Alacritty' && !focused"
+  "95:class_g = 'Alacritty' && !focused",
+  "95:class_g = 'st' && focused",
+  "95:class_g = 'st' && !focused"
 ];
 
 unredir-if-possible = false;    # prevent fullscreen unredirect surprises
