Updated passmenu script and flow with mfa

--- a/config/i3/config
+++ b/config/i3/config
@@ -150,6 +150,7 @@ bindsym $mod+b exec --no-startup-id brave || brave-browser
 bindsym $mod+Shift+f exec --no-startup-id st -e ranger
 bindsym $mod+Shift+v exec --no-startup-id clipmenu -i -l 20 -fn "UbuntuMono Nerd Font:size=12"
 bindsym $mod+p exec --no-startup-id ~/Projects/dotfiles/scripts/screenshot.sh
+bindsym $mod+Shift+p exec --no-startup-id ~/Projects/dotfiles/scripts/passmenu
 
 set $lock_command ~/Projects/dotfiles/scripts/locker
 # exec --no-startup-id xautolock -time 5 -corners ---- -locker $lock_command
