Updated i3blocks' temp block to use the actual script

--- a/config/i3blocks/config
+++ b/config/i3blocks/config
@@ -17,8 +17,8 @@ interval=once
 signal=12
 
 [temp]
-label= 
-command=sensors | grep -i core\ 0 | awk '{print $3}'
+label=
+command=~/Projects/dotfiles/scripts/temp.sh
 interval=2
 
 [battery]
