Changed tmux theme to nordic

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -35,9 +35,7 @@ bind-key f run-shell '~/Projects/dotfiles/config/tmux/popuptmux'
 bind-key , command-prompt "rename-window '%%'"
 
 # Plugins
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
-set -g @theme_disable_plugins 1
-set -g @theme_transparent_status_bar 'true'
+set -g @plugin "arcticicestudio/nord-tmux"
 
 set -g @plugin 'tmux-plugins/tpm'
 
